update base els, gulpfile, and theme file

--- a/assets/src/sass/base/_elements.scss
+++ b/assets/src/sass/base/_elements.scss
@@ -44,7 +44,7 @@ a {
 /**
  * Lists
  * 
- * Beacuse lists are used for menus and other abstractions, let's strip
+ * Because lists are used for menus and other abstractions, let's strip
  * them down by default. When they are used in body fields, let's add back
  * their styles.
  */
