--- a/assets/src/sass/base/_mixins.scss
+++ b/assets/src/sass/base/_mixins.scss
@@ -60,3 +60,14 @@
     @warn "There is no font #{$key}";
   }
 }
+
+/// Cover an area w/ absolute position. Requires a parent to have position relative
+/// @param {Percent} $width [100%]
+/// @param {Percent} $height [100%]
+@mixin cover($width: 100%, $height: 100%) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: $width;
+  height: $height;
+}
