--- a/assets/src/sass/base/_vars.scss
+++ b/assets/src/sass/base/_vars.scss
@@ -15,6 +15,14 @@ $footer-height: 300px;
 /// Where to use sticky footer or not
 $use-sticky-footer: true;
 
+/// Z index map
+$z-index: (
+  below: -10,
+  base: 1,
+  above: 10,
+  goku: 8001,
+);
+
 //
 // Grid
 // We use Susy as a layout tool
