--- a/assets/src/sass/layout/_global.scss
+++ b/assets/src/sass/layout/_global.scss
@@ -36,7 +36,7 @@ $layout-bps: (lap desk);
   @each $gallery in $layout-galleries {
     $cols: 12/$gallery;
     .layout-gallery-#{$gallery}--#{$bp} {
-      .layout-col {
+      > .layout-col {
         @include mq($bp) {
           @include gallery($cols);
         }
