abstract vars in .theme, update base els, global layout

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,7 +44,8 @@ img, audio, video, object {
   max-width: 100%; }
 
 img {
-  vertical-align: middle; }
+  vertical-align: middle;
+  height: auto; }
 
 a {
   color: #2196f3;
@@ -139,7 +140,9 @@ button {
 
 .layout-col {
   width: 100%;
-  float: left; }
+  float: left;
+  margin-left: 0;
+  margin-right: 0; }
 
 @media (min-width: 39.375em) {
   .layout-gallery-2--lap > .layout-col {
@@ -195,36 +198,6 @@ button {
       margin-right: -100%;
       clear: none; } }
 
-@media (min-width: 39.375em) {
-  .layout-gallery-6--lap > .layout-col {
-    width: 15.25424%;
-    float: left; }
-    .layout-gallery-6--lap > .layout-col:nth-child(6n + 1) {
-      margin-left: 0;
-      margin-right: -100%;
-      clear: both;
-      margin-left: 0; }
-    .layout-gallery-6--lap > .layout-col:nth-child(6n + 2) {
-      margin-left: 16.94915%;
-      margin-right: -100%;
-      clear: none; }
-    .layout-gallery-6--lap > .layout-col:nth-child(6n + 3) {
-      margin-left: 33.89831%;
-      margin-right: -100%;
-      clear: none; }
-    .layout-gallery-6--lap > .layout-col:nth-child(6n + 4) {
-      margin-left: 50.84746%;
-      margin-right: -100%;
-      clear: none; }
-    .layout-gallery-6--lap > .layout-col:nth-child(6n + 5) {
-      margin-left: 67.79661%;
-      margin-right: -100%;
-      clear: none; }
-    .layout-gallery-6--lap > .layout-col:nth-child(6n + 6) {
-      margin-left: 84.74576%;
-      margin-right: -100%;
-      clear: none; } }
-
 @media (min-width: 64.375em) {
   .layout-gallery-2--desk > .layout-col {
     width: 49.15254%;
@@ -276,36 +249,6 @@ button {
       clear: none; }
     .layout-gallery-4--desk > .layout-col:nth-child(4n + 4) {
       margin-left: 76.27119%;
-      margin-right: -100%;
-      clear: none; } }
-
-@media (min-width: 64.375em) {
-  .layout-gallery-6--desk > .layout-col {
-    width: 15.25424%;
-    float: left; }
-    .layout-gallery-6--desk > .layout-col:nth-child(6n + 1) {
-      margin-left: 0;
-      margin-right: -100%;
-      clear: both;
-      margin-left: 0; }
-    .layout-gallery-6--desk > .layout-col:nth-child(6n + 2) {
-      margin-left: 16.94915%;
-      margin-right: -100%;
-      clear: none; }
-    .layout-gallery-6--desk > .layout-col:nth-child(6n + 3) {
-      margin-left: 33.89831%;
-      margin-right: -100%;
-      clear: none; }
-    .layout-gallery-6--desk > .layout-col:nth-child(6n + 4) {
-      margin-left: 50.84746%;
-      margin-right: -100%;
-      clear: none; }
-    .layout-gallery-6--desk > .layout-col:nth-child(6n + 5) {
-      margin-left: 67.79661%;
-      margin-right: -100%;
-      clear: none; }
-    .layout-gallery-6--desk > .layout-col:nth-child(6n + 6) {
-      margin-left: 84.74576%;
       margin-right: -100%;
       clear: none; } }
 
