update block, page tpls, build package modules

--- a/templates/block/block.html.twig
+++ b/templates/block/block.html.twig
@@ -26,17 +26,20 @@
  */
 #}
 {%
-  set classes = [
+  set classes, title_classes = [
     'block',
     'block-' ~ attributes.id|clean_class,
     'block-' ~ configuration.provider|clean_class,
     'block-' ~ plugin_id|clean_class,
+    attributes.id,
+  ], [
+    'block__title'
   ]
 %}
 <div{{ attributes.addClass(classes) }}>
   {{ title_prefix }}
   {% if label %}
-    <h2{{ title_attributes }}>{{ label }}</h2>
+    <h2{{ title_attributes.addClass(title_classes) }}>{{ label }}</h2>
   {% endif %}
   {{ title_suffix }}
   {% block content %}
