add eof line to babelrc, update block tpl

--- a/templates/block/block.html.twig
+++ b/templates/block/block.html.twig
@@ -28,7 +28,7 @@
 {%
   set classes, title_classes = [
     'block',
-    'block-' ~ attributes.id|clean_class,
+    'block-' ~ attributes.id,
     'block-' ~ configuration.provider|clean_class,
     'block-' ~ plugin_id|clean_class,
     attributes.id,
