update icon include in html tpl

--- a/templates/layout/html.html.twig
+++ b/templates/layout/html.html.twig
@@ -51,5 +51,6 @@
     {{ page }}
     {{ page_bottom }}
     <js-bottom-placeholder token="{{ placeholder_token|raw }}">
+    <div style="display: none;">{% include active_theme_path() ~ '/assets/icons.svg' %}</div>
   </body>
 </html>
